<resources>
    <string name="app_name">Display Masjid Iqomah Counter</string>

    <string name="imsak">Imsak</string>
    <string name="fajr">Subh</string>
    <string name="dhuhr">Dzuhur</string>
    <string name="asr">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isya</string>
    <string name="syuruq">Syuruq</string>

    <string name="menu_date_and_time">Tanggal dan Waktu</string>
    <string name="menu_background">Latar belakang</string>
    <string name="menu_running_text">Teks berjalan</string>
    <string name="menu_schedule_prayer">Jadwal sholat</string>
    <string name="menu_info">Sunting informasi masjid</string>
    <string name="zone_time">Zona Waktu</string>
    <string name="date_masehi">Tanggal Masehi</string>
    <string name="date_hijri">Tanggal Hijriah</string>
    <string name="upload_file">Unggah data</string>
    <string name="select_prayer">Pilih jadwal shalat</string>
    <string name="duration_slideshow">Durasi tayangan slide</string>
    <string name="schedule_slideshow">Jadwalkan tayangan slide</string>
    <string name="second">%s detik</string>
    <string name="minute">%s menit</string>
    <string name="title_select_timezone">Pilih timezone</string>
    <string name="speed_runningText">Teks Lari Cepat</string>
    <string name="title_schedule_date">Tanggal Jadwal</string>
    <string name="title_edit_background">Sunting Latar Belakang</string>
    <string name="add_slideshow">Tambah tayangan slide</string>
    <string name="set">Terapkan</string>
    <string name="edit">Sunting</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="save">Simpan</string>
    <string name="title_edit_date_and_time">Sunting Waktu dan Tanggal</string>
    <string name="title_add_slideshow">Tambah tayangan slide</string>
    <string name="title_sync_data">Sinkronisasi Data</string>
    <string name="title_edit_information_mosque">Sunting Informasi Masjid</string>
    <string name="name_mosque">Nama Masjid</string>
    <string name="address">Alamat</string>
    <string name="import_text">Impor Teks</string>
    <string name="update">Memperbarui</string>
    <string name="title_edit_schedule_prayer">Sunting Jadwal Sholat</string>
    <string name="refresh_data">Segarkan Data</string>
    <string name="upload_text">Unggah Text</string>
    <string name="schedule_running_text">Jadwalkan Teks Berjalan</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_edit_running_text">Sunting Teks Berjalan</string>
    <string name="title_edit_slideshow">Sunting tayangan slide</string>
    <string name="duration">Durasi %s</string>
    <string name="toast_nothing_selected">Tidak ada yang dipilih</string>
    <string name="toast_successfully_applied">Berhasil diterapkan</string>
    <string name="toast_saved_successfully">Berhasil disimpan!</string>
    <string name="toast_successfully_updated">Berhasil di memperbarui!</string>
    <string name="toast_nothing_is_updated">Tidak ada yang di memperbarui</string>
    <string name="schedule_time">Jadwalkan waktu</string>
    <string name="title_select_time_start">Pilih waktu mulai</string>
    <string name="title_select_time_end">Pilih waktu berakhir</string>
    <string name="menu_language">Bahasa</string>
    <string name="title_select_language">Pilih Bahasa</string>
    <string name="toast_error_download_language">Gagal mengunduh bahasa</string>
    <string name="title_edit_iqomah">Sunting iqomah</string>
    <string name="location">Lokasi</string>
    <string name="country">Negara</string>
    <string name="city">Kota</string>
    <string name="title_select_location">Pilih lokasi</string>
    <string name="now_iqomah">Waktunya Sholat %s</string>
    <string name="iqomah">Iqomah</string>
    <string name="sunnah_fasting">Puasa sunnah</string>
    <string name="time_prayer">Waktu Sholat</string>
    <string name="time_for_iqomah">Waktunya iqomah</string>
    <string name="full_background">Latar Belakang Penuh</string>
    <string name="showclock">Tampilkan Waktu dan Tanggal</string>
    <string name="background_desc">*Ukuran default gambar 1920x1080</string>
    <string name="change_background">Change Background</string>
    <string name="title_about">Tentang</string>
    <string name="title_iqamah_setting">Sunting iqomah</string>
    <string name="now_khutbah">Waktunya Khutbah Jum\'at</string>
    <string name="title_info">*Ukuran default gambar 1920x1080</string>
    <string name="select_in_minutes">Pilih Dalam Menit</string>
    <string name="web_content">https://ribath.org</string>
    <string name="email_content">ribath.org@gmail.com</string>
    <string name="whatsapp_content">+6281345173043</string>
    <string name="search">Search...</string>
</resources>