<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.background.BackgroundSettingFragment"
        tools:background="@drawable/background_gradient_top_drawable">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/title_edit_background"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lin_group2"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin_group2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.43">

            <LinearLayout
                android:id="@+id/lin_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_round_alpha"
                android:clipToPadding="false"
                android:minWidth="500dp"
                android:minHeight="270dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:clipToPadding="false"
                    android:paddingStart="25dp"
                    android:paddingTop="22dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="22dp"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/layout_item_background"
                    tools:spanCount="4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="22dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginEnd="32dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/cb_fullscreen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:buttonTint="@android:color/white"
                            android:text="@string/full_background" />

                        <CheckBox
                            android:id="@+id/cb_showclock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:buttonTint="@android:color/white"
                            android:text="@string/showclock" />

                        <TextView
                            android:id="@+id/tv_desc"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@android:color/white"
                            android:text="@string/background_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_edit"
                        style="@style/ButtonStyleOutline"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:text="@string/edit" />

                    <Button
                        android:id="@+id/btn_delete"
                        style="@style/ButtonStyleOutline"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/delete" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/lin_setting"
                app:layout_constraintTop_toBottomOf="@+id/lin_setting">

                <Button
                    android:id="@+id/btn_add_slide"
                    style="@style/ButtonStyleOutline"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/add_slideshow" />

                <Button
                    android:id="@+id/btn_save"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:minWidth="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/set" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>