<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/background_gradient_top_drawable"
        tools:context=".ui.settings.about.AboutFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="45dp"
            android:text="@string/title_about"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_round_alpha"
            android:paddingHorizontal="40dp"
            android:paddingVertical="26dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:id="@+id/tv_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:drawableStart="@drawable/ic_web"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:linksClickable="false"
                android:text="@string/web_content"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autoLink="none"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:linksClickable="false"
                android:text="@string/email_content"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_web" />

            <TextView
                android:id="@+id/tv_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autoLink="none"
                android:drawableStart="@drawable/ic_whatsapp"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:linksClickable="false"
                android:text="@string/whatsapp_content"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>