<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.runningtext.RunningTextSettingFragment"
        tools:background="@drawable/background_gradient_top_drawable">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/title_edit_running_text"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lin_setting"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="270dp"
            android:minWidth="560dp"
            android:background="@drawable/background_round_alpha"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:paddingBottom="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintVertical_bias="0.43">

            <HorizontalScrollView
                android:id="@+id/bg_preview"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/background_round"
                android:backgroundTint="#222222"
                android:scrollbars="none">

                <TextView
                    android:id="@+id/tv_running_text"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_gravity="end"
                    tools:layout_gravity="center"
                    android:textColor="@android:color/white"
                    tools:text="Doa adalah inti ibadah (HR Tirmizi)"/>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:clipToPadding="false"
                tools:listitem="@layout/layout_item_running_text" />

            <LinearLayout
                android:id="@+id/lin_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/lin_setting"
                app:layout_constraintTop_toBottomOf="@+id/lin_setting">

                <Button
                    android:id="@+id/btn_upload"
                    style="@style/ButtonStyleOutline"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/upload_text" />

                <Button
                    android:id="@+id/btn_schedule"
                    style="@style/ButtonStyleOutline"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/schedule_running_text"/>

                <Button
                    android:id="@+id/btn_save"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:minWidth="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/set"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>